[gd_scene load_steps=5 format=3 uid="uid://dg3iwlvof32n6"]

[ext_resource type="Script" uid="uid://c6do3fs08tv5w" path="res://StargateKey/stargate_key.gd" id="1_alnwu"]
[ext_resource type="Texture2D" uid="uid://cl6x8kx7msnaj" path="res://assets/lever.png" id="2_jqgq1"]
[ext_resource type="FontFile" uid="uid://bgiby34uuktnn" path="res://assets/Fonts/StandardGalacticAlphabet-Regular.ttf" id="3_q8uno"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pb8ss"]
size = Vector2(40, 80)

[node name="StargateKey" type="Area2D"]
script = ExtResource("1_alnwu")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_pb8ss")

[node name="SelectedSkinSprite" type="Sprite2D" parent="."]
position = Vector2(0, -133)
scale = Vector2(0.2, 0.2)

[node name="LeverSprite" type="Sprite2D" parent="."]
position = Vector2(9.53674e-07, -2.86102e-06)
scale = Vector2(2, 1.33333)
texture = ExtResource("2_jqgq1")

[node name="Label" type="Label" parent="."]
offset_left = -22.0
offset_top = -355.0
offset_right = 21.0
offset_bottom = -252.0
theme_override_fonts/font = ExtResource("3_q8uno")
theme_override_font_sizes/font_size = 75
text = "0"

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
